--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: "pre-release"
 on:
   push:
     branches:
-      - "master"
+      - "florian"
 
 jobs:
   pre-release:
@@ -21,7 +21,7 @@ jobs:
       
       - uses: actions/checkout@v2
         with:
-          ref: master
+          ref: florian
           path: splunk_app_3cx
             
       - name: "Generate Build"
