SCX-10: Second draft of changes with dashboard.

--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -12,13 +12,14 @@ display.visualizations.show = 0
 request.ui_dispatch_app = crossrealms_3cx
 request.ui_dispatch_view = search
 search = `default_index` sourcetype="3cx:call_report" \
+| dedup call_id, seq_order | sort 0 -call_id, + seq_order \
 | eval call_start_time = strftime(strptime(call_start_time,"%Y-%m-%d %H:%M:%S"),"%m/%d/%Y %I:%M:%S %p%z")\
 | eval hst = lower(host)\
-| stats count by call_id, call_start_time ,seq_order, start_time, end_time, src_caller_number, src_display_name, dst_caller_number, dst_display_name, action\
-| fields - count | sort -call_id, + seq_order\
+| eval dst_display_name=if(isnull(dst_display_name), dst_caller_number, dst_display_name)\
+| eval src_display_name=if(isnull(src_display_name), src_caller_number, src_display_name)\
 | rename call_id as "Call ID", call_start_time as "Call Time"\
 | stats list(seq_order) as Sequence, list(start_time) as "Start Time", list(end_time) as "End Time", list(src_caller_number) as "Source Number", list(src_display_name) as "Source Name", list(dst_caller_number) as "Dest. Number", list(dst_display_name) as "Dest. Name", list(action) as "Action" by "Call ID", "Call Time"\
-| sort - "Call ID", + seq_order
+| sort 0 - "Call ID", + seq_order
 
 [Agent Login Timeline]
 action.email.useNSSubject = 1
@@ -184,7 +185,7 @@ search = `default_index` sourcetype="3cx:agent_logins"\
 | eval Agent = ag_fname + " " + ag_lname\
 | stats sum(secondsloggedin) as Time by Agent\
 | eval Time=round(Time,2)\
-| sort - Time\
+| sort 0 - Time\
 | rename Time AS "Hours " | head 10
 
 [Calls Volume per Queue]
