--- a/default/props.conf
+++ b/default/props.conf
@@ -9,3 +9,19 @@ EVAL-act_display_name = if(isnull(act_display_name), "-", act_display_name)
 EVAL-dst_display_name = if(isnull(dst_display_name), "-", dst_display_name)
 EVAL-src_display_name = if(isnull(src_display_name), "-", src_display_name)
 EVAL-has_queue = if(src_type=4 OR dst_type=4 OR act_type=4, 1, 0)
+
+
+[3cx:queuecalls]
+EVAL-ts_waiting_sec = tonumber(substr(ts_waiting,0,2))*3600 + tonumber(substr(ts_waiting,4,2))*60 + tonumber(substr(ts_waiting,7,2)) + tonumber("0.".substr(ts_waiting,10))
+EVAL-ts_polling_sec = tonumber(substr(ts_polling,0,2))*3600 + tonumber(substr(ts_polling,4,2))*60 + tonumber(substr(ts_polling,7,2)) + tonumber("0.".substr(ts_polling,10))
+EVAL-ts_servicing_sec = tonumber(substr(ts_servicing,0,2))*3600 + tonumber(substr(ts_servicing,4,2))*60 + tonumber(substr(ts_servicing,7,2)) + tonumber("0.".substr(ts_servicing,10))
+EVAL-ts_locating_sec = tonumber(substr(ts_locating,0,2))*3600 + tonumber(substr(ts_locating,4,2))*60 + tonumber(substr(ts_locating,7,2))
+
+# tot_ringing_sec = waiting + polling
+EVAL-tot_ringing_sec = tonumber(substr(ts_waiting,0,2))*3600 + tonumber(substr(ts_waiting,4,2))*60 + tonumber(substr(ts_waiting,7,2)) + tonumber("0.".substr(ts_waiting,10)) + tonumber(substr(ts_polling,0,2))*3600 + tonumber(substr(ts_polling,4,2))*60 + tonumber(substr(ts_polling,7,2)) + tonumber("0.".substr(ts_polling,10))
+# tot_agent_polling_sec = polling - 20(count_dialed - count_polls)
+EVAL-tot_agent_polling_sec = (tonumber(substr(ts_polling,0,2))*3600 + tonumber(substr(ts_polling,4,2))*60 + tonumber(substr(ts_polling,7,2)) + tonumber("0.".substr(ts_polling,10))) - (20*(count_dialed-count_polls))
+
+EVAL-serviced = if(ts_servicing="00:00:00.0000000", "Unserviced", "Serviced")
+EVAL-isserviced = if(ts_servicing="00:00:00.0000000", 0, 1)
+
