Recording button issues fixed and tested on call logs dashboard.

--- a/default/props.conf
+++ b/default/props.conf
@@ -2,6 +2,8 @@
 [3cx:calls]
 EVAL-call_dir = case((dst_type=1 OR dst_type=13), "Outbound", src_type=1, "Inbound", (src_type=0 AND dst_type=0), "Internal")
 EVAL-recording_url = replace(replace(replace(replace(replace(replace(replace(recording_url, "\)", "%2529"), "\(", "%2528"), " ", "%2520"), "\]", "%255D"), "\[", "%255B"), "%3A", "%25253A"), "\/", "%252F")
+EVAL-src_recording_url = replace(replace(replace(replace(replace(replace(replace(src_recording_url, "\)", "%2529"), "\(", "%2528"), " ", "%2520"), "\]", "%255D"), "\[", "%255B"), "%3A", "%25253A"), "\/", "%252F")
+EVAL-dst_recording_url = replace(replace(replace(replace(replace(replace(replace(dst_recording_url, "\)", "%2529"), "\(", "%2528"), " ", "%2520"), "\]", "%255D"), "\[", "%255B"), "%3A", "%25253A"), "\/", "%252F")
 EVAL-answer_time = if(isnull(answer_time), "-", answer_time)
 EVAL-seg_action_id = if(isnull(seg_action_id), "-", seg_action_id)
 EVAL-act_caller_number = if(isnull(act_caller_number), "-", act_caller_number)
