--- a/default/macros.conf
+++ b/default/macros.conf
@@ -1,3 +1,10 @@
 [default_index]
 definition = index=3cx
 iseval = 0
+
+[3cx_host_filter_search]
+definition = | tstats count where `default_index` by host \
+| lookup host_lookup.csv host OUTPUT hostname \
+| eval officeNames = if(isnull(hostname),host,hostname) \
+| dedup officeNames | table host, officeNames
+iseval = 0
