Code review change to use split instead of substr.

--- a/default/props.conf
+++ b/default/props.conf
@@ -14,16 +14,17 @@ EVAL-has_queue = if(src_type=4 OR dst_type=4 OR act_type=4, 1, 0)
 
 
 [3cx:queuecalls]
-EVAL-ts_waiting_sec = tonumber(substr(ts_waiting,0,2))*3600 + tonumber(substr(ts_waiting,4,2))*60 + tonumber(substr(ts_waiting,7,2)) + tonumber("0.".substr(ts_waiting,10))
-EVAL-ts_polling_sec = tonumber(substr(ts_polling,0,2))*3600 + tonumber(substr(ts_polling,4,2))*60 + tonumber(substr(ts_polling,7,2)) + tonumber("0.".substr(ts_polling,10))
-EVAL-ts_servicing_sec = tonumber(substr(ts_servicing,0,2))*3600 + tonumber(substr(ts_servicing,4,2))*60 + tonumber(substr(ts_servicing,7,2)) + tonumber("0.".substr(ts_servicing,10))
-EVAL-ts_locating_sec = tonumber(substr(ts_locating,0,2))*3600 + tonumber(substr(ts_locating,4,2))*60 + tonumber(substr(ts_locating,7,2))
+EVAL-ts_waiting_sec = tonumber(mvindex(split(ts_waiting, ":"), 0))*3600 + tonumber(mvindex(split(ts_waiting, ":"), 1))*60 + tonumber(mvindex(split(ts_waiting, ":"), 2))
+EVAL-ts_polling_sec = tonumber(mvindex(split(ts_polling, ":"), 0))*3600 + tonumber(mvindex(split(ts_polling, ":"), 1))*60 + tonumber(mvindex(split(ts_polling, ":"), 2))
+EVAL-ts_servicing_sec = tonumber(mvindex(split(ts_servicing, ":"), 0))*3600 + tonumber(mvindex(split(ts_servicing, ":"), 1))*60 + tonumber(mvindex(split(ts_servicing, ":"), 2))
+EVAL-ts_locating_sec = tonumber(mvindex(split(ts_locating, ":"), 0))*3600 + tonumber(mvindex(split(ts_locating, ":"), 1))*60 + tonumber(mvindex(split(ts_locating, ":"), 2))
 
 # tot_ringing_sec = waiting + polling
-EVAL-tot_ringing_sec = tonumber(substr(ts_waiting,0,2))*3600 + tonumber(substr(ts_waiting,4,2))*60 + tonumber(substr(ts_waiting,7,2)) + tonumber("0.".substr(ts_waiting,10)) + tonumber(substr(ts_polling,0,2))*3600 + tonumber(substr(ts_polling,4,2))*60 + tonumber(substr(ts_polling,7,2)) + tonumber("0.".substr(ts_polling,10))
+EVAL-tot_ringing_sec = tonumber(mvindex(split(ts_waiting, ":"), 0))*3600 + tonumber(mvindex(split(ts_waiting, ":"), 1))*60 + tonumber(mvindex(split(ts_waiting, ":"), 2)) + tonumber(mvindex(split(ts_polling, ":"), 0))*3600 + tonumber(mvindex(split(ts_polling, ":"), 1))*60 + tonumber(mvindex(split(ts_polling, ":"), 2))
 # tot_agent_polling_sec = polling - 20(count_dialed - count_polls)
-EVAL-tot_agent_polling_sec = (tonumber(substr(ts_polling,0,2))*3600 + tonumber(substr(ts_polling,4,2))*60 + tonumber(substr(ts_polling,7,2)) + tonumber("0.".substr(ts_polling,10))) - (20*(count_dialed-count_polls))
+EVAL-tot_agent_polling_sec = (tonumber(mvindex(split(ts_polling, ":"), 0))*3600 + tonumber(mvindex(split(ts_polling, ":"), 1))*60 + tonumber(mvindex(split(ts_polling, ":"), 2))) - (20*(count_dialed-count_polls))
 
 EVAL-serviced = if(ts_servicing="00:00:00.0000000", "Unserviced", "Serviced")
 EVAL-isserviced = if(ts_servicing="00:00:00.0000000", 0, 1)
 
+# index=3cx sourcetype="3cx:queuecalls" | table ts_waiting, ts_waiting_sec, ts_polling, ts_polling_sec, ts_servicing, ts_servicing_sec, ts_locating, ts_locating_sec, tot_ringing_sec, tot_agent_polling_sec, serviced, isserviced
