3cx-2.0 - host filter search query issue fixed.

--- a/default/macros.conf
+++ b/default/macros.conf
@@ -3,7 +3,7 @@ definition = index=3cx
 iseval = 0
 
 [3cx_host_filter_search]
-definition = | tstats count where `default_index` by host \
+definition = tstats count where `default_index` by host \
 | lookup host_lookup.csv host OUTPUT hostname \
 | eval officeNames = if(isnull(hostname),host,hostname) \
 | dedup officeNames | table host, officeNames
