--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,12 @@ jobs:
     
     steps:
       - uses: VatsalJagani/splunk-app-action@v0.2
+        env:
+          SPLUNK_APP_ACTION_1: "rm -rf .github"
+          SPLUNK_APP_ACTION_2: "ls"
+          SPLUNK_APP_ACTION_3: "rm -rf .git"
+          SPLUNK_APP_ACTION_4: "ls"
         with:
           app_build_name: "splunk_app_3cx"
           splunkbase_username: ${{ secrets.SPLUNKBASE_USERNAME }}
           splunkbase_password: ${{ secrets.SPLUNKBASE_PASSWORD }}
-        env:
-          SPLUNK_APP_ACTION_1: "rm -rf .github"
-          SPLUNK_APP_ACTION_2: "rm -rf .git"
