Added macro for loopback time for agent login data.

--- a/default/macros.conf
+++ b/default/macros.conf
@@ -8,3 +8,12 @@ definition = tstats count where `default_index` by host \
 | eval officeNames = if(isnull(hostname),host,hostname) \
 | dedup officeNames | table host, officeNames
 iseval = 0
+
+
+# How long probability of user being logged in
+# By default it is 1 day which means you would miss data is user has logged longer than 1 days.
+# Increasing the value will descrease the dashboard performance.
+[3cx_max_agent_login_time]
+definition = "-7d"
+# Make sure to have double quotes on both the side of the value
+iseval = 0
