--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,6 @@ on:
       - '*/*'       # matches every branch containing a single '/'
       - '**'        # matches every branch
   workflow_dispatch:
-    inputs:
-      comment:
-        description: 'Add comment for manual workflow execution.'
-        required: false
-        default: 'Manual execution of Github workflow.'
 
 jobs:
   pre-release:
@@ -22,8 +17,10 @@ jobs:
     runs-on: "ubuntu-latest"
     
     steps:
-      - uses: VatsalJagani/splunk-app-action@v1
+      - uses: VatsalJagani/splunk-app-action@v2
         with:
-          app_build_name: "splunk_app_3cx"
+          app_dir: "."
           splunkbase_username: ${{ secrets.SPLUNKBASE_USERNAME }}
           splunkbase_password: ${{ secrets.SPLUNKBASE_PASSWORD }}
+          app_utilities: "whats_in_the_app"
+          my_github_token: ${{ secrets.MY_GITHUB_TOKEN }}
