--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,10 @@ jobs:
     runs-on: "ubuntu-latest"
     
     steps:
-      - uses: VatsalJagani/splunk-app-action@v3
+      - uses: VatsalJagani/splunk-app-action@v4
         with:
           app_dir: "."
+          to_make_permission_changes: true
           splunkbase_username: ${{ secrets.SPLUNKBASE_USERNAME }}
           splunkbase_password: ${{ secrets.SPLUNKBASE_PASSWORD }}
           app_utilities: "whats_in_the_app"
